# agent-bench

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  bunfig.toml  package.json  tsconfig.json
results/: README.md  summary.csv
src/: cli.rs  error.rs  evaluator.rs  index.ts  main.rs  runner.rs  task.rs
src/agent_bench/: cli.py  collect_results.py  task.py
src/agent_bench/agents/: base.py  claude.py  claude_sdk.py
src/agents/: claude.rs  factory.ts  mod.rs  opencode.ts  types.ts
src/cli/: index.ts
src/cli/commands/: collect.ts  init.ts  list.ts  run.ts  verify.ts
src/collectors/: csv.ts
src/core/: config.ts  loader.ts  runner.ts  task.ts  workspace.ts
src/evaluator/: results.ts  verifier.ts
src/utils/: errors.ts  logger.ts
tasks/tools/: find-os-001.yaml
