[package]
name = "agent-bench"
version = "0.1.0"
edition = "2021"
description = "An open-source benchmark for evaluating AI coding agents on real-world engineering tasks"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.34", features = ["full", "process"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Shell escaping
shlex = "1.3"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Git operations
git2 = "0.18"
